Version 1.2.1
* Enhancements
  * Added numerous missing element types
  * Support for Selenium 3 (Thanks Titus Fortner)
  * Added new generated method for Image - (name)_loaded? (Thanks joesho112358)
  * Added CSS support for Watir (Thanks Titus Fortner)

Version 1.2.0 / 2016-6-15
* Enhancements
  * Added array methods to section collections (Thanks Cohen Carlisle)
  * Ensuring that method_missing is always forwarded to the root element (Thanks Cohen Carlisle)
  * Added ability to call style method with no parameters (Thanks Justin Watts)
    - with Watir will return all styles; with Selenium will return empty string
  * Cleaned up frame and iframe nesting (Thanks Jon Snow)
  * Support for adding other platforms (Thanks pvmeerbe)

=== Version 1.1.1 / 2016-1-7
* Enhancements
  * Added row accessor method and support for finding row elements directly (Thanks Ethan Hedrick)
  * Added list_items method to UnorderedList to get an array of children.
  * Speed optimizations for UnorderedList
  * Added list_items method to OrderedList to get an array of children.
  * Speed optimizations for OrderedList
  * Added ability to check if a section is visible?, present?, or exists? (Thanks Donavan Stanley)
  * Added support for the Italic (i) element (Thanks Sergey Morozov)
  * Added size and location methods to all elements (Thanks Steve Jackson)
  * Added width, height, and centre methods for elements (Thanks David Selby)
  * Added missing right_click method for watir (Thanks David Selby)

=== Version 1.1.0 / 2015-5-2
* Enhancements
  * Performance enhancements when initializing elements (Thanks Dane Andersen)
  * Enabled button elements to return text when using selenium-webdriver.
  * Added support for :index identifier in indexed properties.
  * Added page_section and page_sections accessor methods which can specify a page object of elements on another page object.
* Fixes
  * Fixed issue causing exceptions when comparing equality of element to non-element objects.